logs/20250520_100852.log
Hello,DirectX!

WSTRING1280

Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Comile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:4:5: error: unknown type name 'flaot32_t4'
    flaot32_t4 color;
    ^

